[project]
name = "tesla-mcp"
version = "0.1.0"
description = "MCP server for Tesla vehicles — TeslaMate analytics + Fleet API commands"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]

[project.scripts]
tesla-mcp = "tesla:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
