[project]
name = "mcp-teslamate-fleet"
version = "0.1.0"
description = "MCP server for TeslaMate analytics + Fleet API commands"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]

[project.scripts]
mcp-teslamate-fleet = "tesla:mcp.run"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["tesla.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
